<resources>
    <string name="app_name" translatable="false">XtMapper</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="configure">Settings</string>
    <string name="edit_keymap">Edit keymap</string>
    <string name="help">Help</string>
    <string name="package_name">package name: </string>
    <string name="mouse_sensitivity">Mouse Sensitivity</string>
    <string name="mouse_aim_activated">
        Shooting mode activated Right click or ~ key to exit
    </string>
    <string name="scroll_speed">Scroll Speed</string>
    <string name="keyboard_shortcuts">Keyboard Shortcuts:</string>
    <string name="dialog_alert_editor">
        Service is not running. \n
        You might not be able to map all key events. \n
        Run Activation and try again.</string>

    <string name="dialog_alert_editor_title">Not Activated</string>
    <string name="dialog_alert_add_profile">Enter new profile name:</string>
    <string name="dialog_alert_select_profile">Select Profile for \ </string>
    <string name="dialog_alert_enable_profile">Enable keymapping for this app?</string>

    <string name="key">Key</string>

    <string name="switch_profile">Switch Profile</string>
    <string name="launch_editor">Launch Editor</string>
    <string name="pause_resume">Pause/Resume</string>

    <!-- bottom navigation in settings fragment -->
    <string name="tuning">Tuning</string>
    <string name="config">Config</string>
    <string name="shortcuts">Shortcuts</string>

    <string name="trigger_mouse_aim_with">Trigger mouse aim with:</string>
    <string name="right_click">Right click</string>
    <string name="key_grave">~ Key</string>

    <string name="pinch_to_zoom_gesture_info">Perform two finger gesture with:</string>
    <string name="drag_mouse">Ctrl + Drag Mouse</string>
    <string name="mouse_wheel">Ctrl + Mouse Wheel</string>
    <string name="mouse_aim">Mouse Aim</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="ok">@android:string/ok</string>
    <string name="yes">@android:string/yes</string>
    <string name="no">@android:string/no</string>
    <string name="swipe_delay_ms">Swipe delay %d milliseconds</string>
    <string name="profile_name">Profile Name</string>
    <string name="root_not_found_title">Root access not found</string>
    <string name="root_not_found_message">Root access is required for the keymapper to function. \n Please grant superuser to XtMapper from KernelSU manager app</string>
    <string name="root_no_privileges_title">Service failed to start as root</string>
    <string name="root_no_privileges_message">
        Unable to obtain privileges. Do you want to exit the application?\n
        If you already granted superuser privileges, it might work after exiting and opening the app.
    </string>
    <string name="disable_auto_profile">Disable auto profiling</string>
    <string name="touchpad_input">Touchpad Input</string>
    <string name="launch_app">Launch App</string>
    <string name="use_shizuku">Use Shizuku</string>
    <string name="pointer">Pointer Mode</string>
    <string name="open_editor_as_overlay">Open editor as overlay</string>

    <!--  Keymap editor  -->
    <string name="d_pad">D-Pad</string>
    <string name="crosshair">CrossHair</string>
    <string name="left_click">Left Click</string>
    <string name="swipe_key">Swipe Key</string>
    <string name="add_key">Add Key</string>
    <string name="save">Save</string>

    <!--  Mouse Aim  -->
    <string name="toggle">Toggle</string>
    <string name="hold">Hold</string>

    <!--  Pointer Mode  -->
    <string name="combined">Combined</string>
    <string name="overlay">Overlay</string>
    <string name="system">System</string>

    <!--  Touchpad  -->
    <string name="relative">Relative</string>
    <string name="disabled">Disabled</string>
    <string name="direct">Direct</string>

    <string name="shizuku_not_authorized_title">Shizuku not authorized</string>
    <string name="shizuku_not_authorized_message">Authorize XtMapper from Shizuku manager app to continue</string>
    <string name="activate_with">Activate with</string>
    <string name="grave_key">~ key</string>
    <string name="x_sensitivity">X-Sensitivity</string>
    <string name="y_sensitivity">Y-Sensitivity</string>
    <string name="apply_non_linear_scaling">Apply non linear scaling</string>
    <string name="import_export">Import/Export</string>
    <string name="import_profiles">Import profiles</string>
    <string name="import_previously_exported_profiles_from_storage">Import previously exported profiles from storage.</string>
    <string name="export_profiles">Export profiles</string>
    <string name="export_profiles_to_disk_for_restoring_later_or_sharing">Export profiles to disk for restoring later or sharing.</string>
    <string name="export_selected">Export selected</string>
    <string name="select_all">Select all</string>
    <string name="import_button">Import</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="enabled">Enabled</string>
    <string name="no_profile_selected">No profile selected</string>
    <string name="select_profile_from_below">Tap on a profile from the list below to select it</string>
    <string name="detected_shizuku">Detected Shizuku</string>
    <string name="use_shizuku_for_activation">Use Shizuku for activation?</string>
    <string name="add_games">Add Games</string>
    <string name="macro">Macro</string>
    <string name="loading">Loading…</string>
    <string name="camera">Camera</string>
    <string name="press_any_key_to_stop_recording">Press any key to stop recording…</string>
    <string name="advanced">Advanced</string>
    <string name="shizuku_not_running_title">Shizuku is not started</string>
    <string name="shizuku_not_running_message"/>
    <string name="edit">Edit</string>
    <string name="show_controls_on_screen">Show controls on screen</string>
    <string name="select_a_display">Select a Display</string>
    <string name="no_displays_found">No displays found</string>
    <string name="display_id">Display #%1$s</string>
    <string name="opacity">Opacity</string>
    <string name="floating_keys_size">Floating keys size</string>
    <string name="mouse_walk">Mouse walk</string>
    <string name="reset">Reset</string>

    <!-- Import/Export functionality -->
    <string name="default_backup_name">backup.zip</string>
    <string name="error_export_failed">Export Failed</string>
    <string name="action_retry">Retry</string>
    <string name="msg_backup_saved">Backup Saved Successfully</string>
    <string name="error_save_failed">Save Failed</string>
    <string name="msg_profiles_imported">Profiles Imported Successfully</string>
    <string name="error_import_failed">Import Failed</string>
</resources>