<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activate_with" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/grave_key_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/grave_key" />
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/right_click_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/right_click" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/x_sensitivity" />
    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0.1"
        android:valueTo="5"
        android:id="@+id/slider_x_sensitivity"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/y_sensitivity" />
    <com.google.android.material.slider.Slider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="0.1"
        android:valueTo="5"
        android:id="@+id/slider_y_sensitivity"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/apply_non_linear_scaling_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply_non_linear_scaling" />
</LinearLayout>